@@ -1,6 +1,9 @@
 Changelog for GEMC
 ==================
 
+7/10/19
+- added DIGITIZATION_VARIATION, to be used by digitization routines.
+
 7/8/19
  - added background merging for FTOF, EC, PCAL, FT_CAL, FT_HODO, LTCC, HTCC
 
